--- a/blacklist_config.json
+++ b/blacklist_config.json
@@ -1,11 +1,11 @@
 {
   "ipConfigs": [
     {
-      "ip": "185.149.201.173",
+      "ip": "89.171.84.151",
       "startDelay": 1,
       "displayFrequency": 1,
       "block": false,
-      "customMessage": ""
+      "customMessage": "ADMINISTRATOR, CONTACT THE MOD AUTHOR! NO ACCESS TO THE ADRIX IMMERSIVE CHAT!"
     }
   ]
 }
