Modify customMessage in blacklist_config.json
Updated customMessage to include repeated warning.

--- a/blacklist_config.json
+++ b/blacklist_config.json
@@ -5,7 +5,7 @@
       "startDelay": 1,
       "displayFrequency": 1,
       "block": false,
-      "customMessage": "ADMINISTRATOR, CONTACT THE MOD AUTHOR! NO ACCESS TO THE ADRIX IMMERSIVE CHAT!"
+      "customMessage": "ADMINISTRATOR, CONTACT THE MOD AUTHOR! NO ACCESS TO THE ADRIX IMMERSIVE CHAT! ADMINISTRATOR, CONTACT THE MOD AUTHOR! NO ACCESS TO THE ADRIX IMMERSIVE CHAT!"
     }
   ]
 }
